--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,4 @@
 \documentclass[a4paper]{report}
-
 % Some basic packages
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -59,8 +58,10 @@
     \tableofcontents
     \input{lec_01.tex}
     \input{lec_02.tex}
+    \input{./ex_01.tex}
     \input{lec_03.tex}
     \input{./lec_04.tex}
+    \input{./ex_02.tex}
     \input{./lec_05.tex}
     \input{./lec_06.tex}
     \input{./lec_07.tex}
